This is the Changelog for GregTech6-Unofficial
6.14.10: (Not released yet).
Nothing

6.14.09: (Not released yet).
Nothing

6.14.08: (Not released yet).
Nothing

6.14.07:
[COMPAT] Compatibility with TFC food system. GT Foods can now be consumed when Terra Firma Craft is installed and they have the five tastes (sweetness, sourness, bitterness, saltiness, and savory) in TFC now.

6.14.06:
[FIXED] MESU cannot save energy correctly.
[FIXED] Perforated Bushing having wrong material information.
[CHANGED] Increased the yield of Epoxid Resin and Photoresist production.
[CHANGED] Degraded IV Batteries capacity and their recipes are now like before.
[CHANGED] NEI recipes no longer display that misleading "Tier".
[ADDED] Multiblock Energy Storage Unit (MESU).
Its dimensions can be changed in a range, providing different voltages and energy capacity. Longer it is, higher voltage it has. Larger it is, greater capacity it has.
Use a screwdriver to alter its current output, up to 32 Amps.
[ADDED] Lithium-F-Phosphate, a salt used in Li-ion battery electrolyte, Ethyl Methyl Carbonate.
[ADDED] Six battery cores for MESU. Each has different capacity.
[ADDED] Two battery electrode parts for MESU. Each allows different length-voltage multiplier of the battery.

6.14.05:
Broken, do not use!

6.14.04:
[NOTE] This is not a really important update, just for the hotfix. I will not merge GT6 until the Asmization is tested with some time.
[FIXED] MacOs File System causes some config files to reset during launch.

6.14.03:
[COMPAT] When TerraFirmaCraft or TerraFirmaCraft Plus is loaded, the heat, electric, and chemical damage is accommodated.
[FIXED] Titanium not showing up in NEI.
[FIXED] Biochemical Research Lab cannot form in some direction of facing.
[FIXED] Fermenting recipe conflicts.
[CHANGED] Less time is now required to incubate the biomass-origin bacterias.

6.14.02:
[NOTE] This is a quite major update, read the changelog before update is recommended...