@@ -89,7 +89,7 @@ public class RM {
 	, Electrolyzer              = new RecipeMap                     (null, "gt.recipe.electrolyzer"                 , "Electrolyzer"                    , null, 0, 1, RES_PATH_GUI+"machines/Electrolyzer"              ,/*IN-OUT-MIN-ITEM=*/ 2, 6, 1,/*IN-OUT-MIN-FLUID=*/ 2, 6, 0,/*MIN*/ 2,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
 	, Lightning                 = new RecipeMap                     (null, "gt.recipe.lightning"                    , "Lightning Processor"             , null, 0, 1, RES_PATH_GUI+"machines/Lightning"                 ,/*IN-OUT-MIN-ITEM=*/ 6, 6, 0,/*IN-OUT-MIN-FLUID=*/ 6, 6, 0,/*MIN*/ 2,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
 	, ImplosionCompressor       = new RecipeMap                     (null, "gt.recipe.implosioncompressor"          , "Implosion Compressor"            , null, 0, 1, RES_PATH_GUI+"machines/ImplosionCompressor"       ,/*IN-OUT-MIN-ITEM=*/ 3, 3, 3,/*IN-OUT-MIN-FLUID=*/ 0, 0, 0,/*MIN*/ 0,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
-	, OilCleaner                = new RecipeMap                     (null, "gt.recipe.oilcleaner"                   , "Oil Cleaner"                     , null, 0, 1, RES_PATH_GUI+"machines/Mixer"                     ,/*IN-OUT-MIN-ITEM=*/ 6, 1, 0,/*IN-OUT-MIN-FLUID=*/ 6, 2, 0,/*MIN*/ 2,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
+	, OilCleaner                = new RecipeMapFuelCleaner          (null, "gt.recipe.oilcleaner"                   , "Oil Cleaner"                     , null, 0, 1, RES_PATH_GUI+"machines/Mixer"                     ,/*IN-OUT-MIN-ITEM=*/ 6, 1, 0,/*IN-OUT-MIN-FLUID=*/ 6, 2, 0,/*MIN*/ 2,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
 	, RollingMill               = new RecipeMap                     (null, "gt.recipe.rollingmill"                  , "Rolling Mill"                    , null, 0, 1, RES_PATH_GUI+"machines/RollingMill"               ,/*IN-OUT-MIN-ITEM=*/ 1, 1, 1,/*IN-OUT-MIN-FLUID=*/ 0, 0, 0,/*MIN*/ 0,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
 	, RollBender                = new RecipeMap                     (null, "gt.recipe.rollbender"                   , "Roll Bender"                     , null, 0, 1, RES_PATH_GUI+"machines/RollBender"                ,/*IN-OUT-MIN-ITEM=*/ 1, 1, 1,/*IN-OUT-MIN-FLUID=*/ 0, 0, 0,/*MIN*/ 0,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
 	, RollFormer                = new RecipeMap                     (null, "gt.recipe.rollformer"                   , "Roll Former"                     , null, 0, 1, RES_PATH_GUI+"machines/RollFormer"                ,/*IN-OUT-MIN-ITEM=*/ 1, 1, 1,/*IN-OUT-MIN-FLUID=*/ 0, 0, 0,/*MIN*/ 0,/*AMP=*/ 1, ""                    ,    1, ""      , T, T, T, T, F)
