@@ -9,7 +9,8 @@ Nothing
 Nothing
 
 6.14.07:
-[COMPAT] Compatibility with TFC food system. GT Foods can now be consumed when Terra Firma Craft is installed and they have the five tastes (sweetness, sourness, bitterness, saltiness, and savory) in TFC now.
+[FIXED] Fuel Cleaner now auto-searches for any kind of sulfured fuel that are in the fluid slots of it. And it will automatically change to execute that fuel cleaning recipe.
+[COMPAT] Compatibility with TFC & TFC-Plus food system. GT Foods can now be consumed when Terra Firma Craft is installed and they have the five tastes (sweetness, sourness, bitterness, saltiness, and savory) in TFC now.
 
 6.14.06:
 [FIXED] MESU cannot save energy correctly.
